tests/error/errors_on_usage/for_target.err
Error: Variable not defined (at $FILE:8:11)
  | 
6 |     for x in xs:
7 |         pass
8 |     return x
  |            ^ `x` might be undefined ...
  | 
6 |     for x in xs:
  |              -- ... if this expression is `False`

Guppy compilation failed due to 1 previous error
